--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,12 @@
     <string name="password">Enter Password</string>
     <string name="textOff">English</string>
     <string name="textOn">عربى</string>
-    <string name="PLEASE_ENTER_PLOTNUMBER">Please Enter Plot Number</string>
-    <string name="valid_plot_number">Please Enter Valid Plot Number</string>
-    <string name="plot_does_not_exist">Plot Number Does Not Exist</string>
-    <string name="click_on_map">Please Click On The Map To Continue</string>
+    <string name="PLEASE_ENTER_PLOTNUMBER">Please enter plot number</string>
+    <string name="valid_plot_number">Please enter valid plot number</string>
+    <string name="plot_does_not_exist">Plot number does not exist</string>
+    <string name="click_on_map">Please click on plot to proceed</string>
     <string name="register">Do you want to create an account?</string>
-    <string name="forgot_password">Do you want rest your username or password?</string>
+    <string name="forgot_password">Do you want to reset your username or password?</string>
     <string name="loading">Loading...</string>
     <string name="not_now">Close</string>
     <string name="tap_to_choose">Tap to choose area</string>
@@ -30,6 +30,9 @@
     <string name="no_valid_land">Please enter a valid title deed number</string>
     <string name="community_error">Error while fetching community</string>
     <string name="please_enter_land">Please enter the title deed number</string>
+    <string name="enter_username_and_password">Please enter your username and password</string>
+    <string name="enter_username">Please enter your username</string>
+    <string name="enter_password">Please enter your password</string>
 
     <string-array name="request_site_plan">
         <item>land owner</item>
