--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -140,6 +140,8 @@
     <string name="select_emirate">من فضلك اختر الإمارة</string>
     <string name="deatails_saved">تم حفظ البيانات بنجاح</string>
     <string name="valid_doc">يرجى تحميل الوثائق الصحيحة</string>
+    <string name="try_kharetati_app">لتحميل تطبيق خريطتي</string>
+    <string name="kharetati_app">برنامج خريطتي</string>
 
 
     <string-array name="emirates">
