--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Kharetati</string>
-    <string name="title_welcome">WELCOME</string>
+    <string name="title_welcome">Welcome</string>
     <string name="login">Login</string>
     <string name="internet_connection_problem1">Please check your internet connection and try again</string>
     <string name="lbl_warning">Warning</string>
@@ -176,6 +176,10 @@
     <string name="feedback_mobile_number">Phone *</string>
     <string name="submit">Submit</string>
     <string name="all_fields_are_required">All fields are required</string>
+    <string name="search">Search</string>
+    <string name="enter_valid_username">Please enter valid username</string>
+    <string name="CANCELTRANSACTIONALERT">Are you sure you want to cancel the transaction?</string>
+    <string name="exit_alert_message">Are you sure you want to exit from the application?</string>
 
     <string-array name="request_site_plan">
         <item>land owner</item>
