--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,8 +52,8 @@
     <string name="done">Done</string>
     <string name="request_num">Request Number</string>
     <string name="request_details">Request Details</string>
-    <string name="plot_no">Plot No:</string>
-    <string name="area">Area:</string>
+    <string name="plot_no">Plot No: </string>
+    <string name="area">Area: </string>
     <string name="favourite_deleted">Favorite has been successfully deleted</string>
     <string name="NO_FAVOURITE_PLOTS_FOUND">Currently no favourites are available</string>
     <string name="confirmation_delete">Are you sure you want to delete?</string>
@@ -223,4 +223,5 @@
         <item>6</item>
         <item>7</item>
     </string-array>
+    <string name="enter_favourite_name">Please enter the favourite name</string>
 </resources>
