--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="no_valid_land">Please enter a valid title deed number</string>
     <string name="community_error">Error while fetching community</string>
     <string name="please_enter_land">Please enter the title deed number</string>
-    <string name="enter_username_and_password">Please enter your username and password</string>
+    <string name="username_and_password">Please enter your username and password</string>
     <string name="enter_username">Please enter your username</string>
     <string name="enter_password">Please enter your password</string>
 
