1.Attachment next button enable issue 2.delivery fragment next button enable issue 3.bug fixes

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -221,4 +221,5 @@
         <item>7</item>
     </string-array>
     <string name="enter_favourite_name">يرجى إدخال اسم المفضلة</string>
+    <string name="enter_valid_password">الرجاء إدخال كلمة مرور صالحة</string>
 </resources>
