--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,5 +252,14 @@
     <string name="no">No</string>
     <string name="enter_plot_or_date">Please enter plot number or select valid date range</string>
     <string name="refresh">Refresh</string>
+    <string name="uaeloginfail">Failed With UAE Pass Login, Please try Again</string>
+    <string name="title_settings">Settings</string>
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="arabic">العربية</string>
+    <string name="talkback">Talk Back</string>
+    <string name="fontsize">Font Size</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
 
 </resources>
