--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -183,11 +183,11 @@
     <string name="exit_alert_message">هل أنت متأكد من أنك تريد الخروج من التطبيق؟</string>
     <string name="logout">خروج</string>
     <string name="logout_msg">هل أنت متأكد أنك تريد تسجيل الخروج؟</string>
-    <string name="SHAREKHARETATIAPP">انشر تطبيق خریطتي</string>
+    <string name="SHAREKHARETATIAPP">مشاركة التطبيق</string>
     <string name="RATEUS">قيمنا</string>
     <string name="ABOUTUS">نبذة عنا</string>
     <string name="FAQMENU">الأسئلة الأكثر تكرارا </string>
-    <string name="TERMSANDCONDITIONS">الشروط والاحكام</string>
+    <string name="TERMSANDCONDITIONS">شروط الإستعمال</string>
     <string name="ACCESSIBILITY">إمكانية الوصول</string>
     <string name="iamowner">أنا صاحب قطعة الأرض</string>
     <string name="iamnotowner">أنا لست صاحب الأرض</string>
@@ -256,19 +256,19 @@
     <string name="enter_plot_or_date">الرجاء إدخال رقم قطعة الارض أو إختر نطاق تاريخ الصلاحية</string>
     <string name="uaeloginfail">فشل في تسجيل الدخول بالهوية الرقمية، الرجاء المحاولة مرة أخرى</string>
     <string name="refresh">Refresh</string>
-    <string name="title_settings">Settings</string>
-    <string name="language">Language</string>
+    <string name="title_settings">الإعدادات</string>
+    <string name="language">اللغة</string>
     <string name="english">English</string>
     <string name="arabic">العربية</string>
-    <string name="talkback">Talk Back</string>
-    <string name="fontsize">Font Size</string>
-    <string name="on">On</string>
-    <string name="off">Off</string>
-    <string name="finddus">Find Us</string>
+    <string name="talkback">قارئ الشاشة</string>
+    <string name="fontsize">حجم الخط</string>
+    <string name="on">تشغيل</string>
+    <string name="off">إيقاف</string>
+    <string name="finddus">اعثر عليناا</string>
     <string name="alriga" />
-    <string name="callus">call us</string>
-    <string name="visitus">visit us</string>
-    <string name="mailus">mail us</string>
-    <string name="reachus">reach us</string>
-    <string name="sendus">send us</string>
+    <string name="callus">إتصل بنا</string>
+    <string name="visitus">قم بزيارتن</string>
+    <string name="mailus">راسلنا</string>
+    <string name="reachus">تواصل معنا</string>
+    <string name="sendus">أرسل لنا</string>
 </resources>
