--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,7 +269,7 @@
     <string name="reachus">reach us</string>
     <string name="sendus">send us</string>
     <string name="more">Options</string>
-    <string name="lastlogin"><b>Last Login</b> at</string>
+    <string name="lastlogin"><b>Last Login</b> on</string>
     <string name="login_with">Login with</string>
     <string name="with_uaepass"> UAE Pass</string>
     <string name="help">Help</string>
