1. Bug fixes as on 02/07/2020 12:00pm

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -277,4 +277,8 @@
     <string name="login_with">الدخول</string>
     <string name="with_uaepass">بالهوية الرقمية</string>
     <string name="help">مساعدة</string>
+    <string name="viewdetails">عرض التفاصيل</string>
+    <string name="notifications">إشعارات </string>
+    <string name="makani">مكاني</string>
+    <string name="payment">دفع</string>
 </resources>
