--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="internet_connection_problem1">Please check your internet connection and try again</string>
     <string name="lbl_warning">Warning</string>
     <string name="ok">Ok</string>
-    <string name="forgot_username_password">Forgot Password?</string>
+    <string name="forgot_username_password">Forgot Password</string>
     <string name="rememberme">Remember Me</string>
     <string name="open_makani_confirm">Are you sure you want to navigate to Makani?</string>
     <string name="or">OR</string>
@@ -13,8 +13,8 @@
     <string name="createAccount">Create an Account</string>
     <string name="signin_as_guest">Sign in as Guest</string>
     <string name="login_uaepass">Login with UAE PASS</string>
-    <string name="username">Enter username or email</string>
-    <string name="password">Enter password</string>
+    <string name="username">Enter Username*</string>
+    <string name="password">Enter Password*</string>
     <string name="textOff">English</string>
     <string name="textOn">عربى</string>
     <string name="PLEASE_ENTER_PLOTNUMBER">Please enter plot number</string>
@@ -272,11 +272,13 @@
     <string name="more">Options</string>
     <string name="lastlogin"><b>Last Login</b> on</string>
     <string name="login_with">Login with</string>
-    <string name="with_uaepass"> UAE Pass</string>
+    <string name="with_uaepass"> UAE PASS</string>
     <string name="help">Help</string>
     <string name="viewdetails">View Details</string>
     <string name="notifications">Notifications</string>
     <string name="makani">Makani</string>
+    <string name="newuser">NewUser?</string>
+    <string name="reg">Register</string>
 
     <string-array name="arrHeader">
         <item>header 1</item>
