1. Bug fixes as on 07/07/2020 1:00pm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="or">OR</string>
     <string name="cancel">Cancel</string>
     <string name="createAccount">Create an Account</string>
-    <string name="signin_as_guest">Sign in as Guest</string>
+    <string name="signin_as_guest">Login as Guest</string>
     <string name="login_uaepass">Login with UAE PASS</string>
     <string name="username">Enter Username*</string>
     <string name="password">Enter Password*</string>
